# spotify-lite

./: LICENSE  README.md  dotenv.config.js  index.html  package-lock.json  package.json
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/player/: api.rs  models.rs
src-tauri/src/spotify_api/: api_models.rs  client.rs  mod.rs
src/components/PlaylistCard/: PlaylistCard.jsx
src/components/TrakerCard/: TrackCard.jsx  style.css
src/layouts/Musicbar/: Musicbar.jsx  style.css
src/layouts/Navbar/: Navbar.jsx  style.css
src/layouts/Playlist/: Playlist.jsx  style.css
src/pages/: BackgroundLogin.jsx  Home.jsx  Login.jsx  home.css  login.css
src/services/: player.js  requestAccessToken.js  token.js  validateAccessToken.js
