[package]
name = "spotify-lite"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
lazy_static = "1.4.0"
tauri = { version = "1.3", features = ["shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = {version = "1.11.0", features = ["full"] }
dotenv = "0.15.0"
time = { version = "0.3.15", features = ["formatting", "parsing"] }
librespot = { path="D:/Files/Dev/Rust/libs/librespot" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
